force-app/main/default/objects/Accounts__c/Accounts__c.object-meta.xml
<CustomObject>
    <label>Accounts</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>