force-app/main/default/objects/Accounts__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Unique identifier or reference number assigned to this account (e.g. bank account number or card number).</description>
    <inlineHelpText>Enter the account number as it appears on your bank statement or card.</inlineHelpText>
    <label>Account Number</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>