force-app/main/default/objects/Accounts__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if account is active.</description>
    <inlineHelpText>Indicates whether this account is currently active for transactions.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>