force-app/main/default/objects/Accounts__c/fields/Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance__c</fullName>
    <description>Current balance in the account</description>
    <inlineHelpText>Represents the current available balance in this account. This value is updated based on income and expense transactions.</inlineHelpText>
    <label>Current Balance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>