force-app/main/default/objects/Accounts__c/listViews/Active_Accounts.listView-meta.xml
<ListView>
    <fullName>Active_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Current_Balance__c</columns>
    <columns>Active__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Accounts</label>
</ListView>